# weather-analytics

./: .env  .gitignore  Architecture Diagram.txt  README.md  main.py  pyproject.toml  requirements.txt  run_pipeline.ps1  weather_raw.parquet
Ingestion/: download_kaggle.py  load_dataset.py  test.py
Spark/: load_to_bq.py  test.py  transform-weather.py
dbt-project/dbt_project/: .user.yml  dbt_project.yml  profiles.yml  run_dbt.ps1
dbt-project/dbt_project/models/: schema.yml
dbt-project/dbt_project/models/marts/: facts_weather_daily.sql
dbt-project/dbt_project/models/staging/: stg_weather.sql
kestra/: weather-pipeline.yml
weather_processed/: .part-00000-80634f97-bc5f-40f2-9cc9-e1702339f172-c000.snappy.parquet.crc  .part-00000-c9893bd4-ab2a-4f84-8250-2fd404195b54-c000.snappy.parquet.crc  part-00000-80634f97-bc5f-40f2-9cc9-e1702339f172-c000.snappy.parquet  part-00000-c9893bd4-ab2a-4f84-8250-2fd404195b54-c000.snappy.parquet
